<resources>
    <string name="app_name">FoodRecom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="text_label">Необходимо употреблять в пищу \n
        больше овощей и фруктов. \n
        Частое употребление фастфуда \n
        вредит вашему здоровью.\n
    Необходимо воздерживаться от \n
        чрезмерного уопотребления алкоголя.</string>
    <string name="freezer">Холодильник</string>
    <string name="add_product">Добавить в холодильник</string>
    <string name="remove_product">Удалить из холодильника</string>
    <string name="change_product_mass_1">Масса продукта</string>
    <string name="change_product_mass_2">Изменение массы продукта</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="enter_mass">Введите массу продукта</string>
    <string name="delete_item">Удаление</string>
    <string name="delete_item_1">Удалить продукт из холодильника?</string>
</resources>
