<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp">
    <TextView
        android:layout_margin="5sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/change_product_mass_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_margin="10sp"
        android:textAlignment="center"
        android:text="@string/change_product_mass_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_margin="10sp"
        android:hint="@string/enter_mass"
        android:id="@+id/editTextNewMassProduct"
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/ok"
            android:layout_weight="1"
            android:id="@+id/button_ok_change_mass_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/cancel"
            android:layout_weight="1"
            android:id="@+id/button_cancel_change_mass_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableRow>
</LinearLayout>