<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15sp">
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#ff0000"
        android:text="@string/delete_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_margin="10sp"
        android:textAlignment="center"
        android:textColor="#fc7171"
        android:text="@string/delete_item_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:text="@string/ok"
            android:id="@+id/button_delete_item_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/button_delete_item_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableRow>
</LinearLayout>